fix: ! content in header in not slipping out but blocks overlap

--- a/src/components/website/mapApp/MapAppHeader.scss
+++ b/src/components/website/mapApp/MapAppHeader.scss
@@ -27,6 +27,7 @@
 
     .map-app-header-block {
         height: 46px;
+        min-width: fit-content;
 
         background-color: #000000;
 
